tests/fixtures/errors/arity_too_many.ore
fn add a:Int b:Int -> Int
  a + b

fn main
  result := add(1, 2, 3)
  print result
